# be_ftdi

./: .gitignore  README.md
hardware/: README.md  be_ftdi.dch  be_ftdi.dip  be_ftdi.dipb0  ftdi.eli  logo.tif
hardware/gerbers/: bftdi.drl  bftdi_BoardOutline.gbr  bftdi_Bottom.gbr  bftdi_BottomMask.gbr  bftdi_Top.gbr  bftdi_TopMask.gbr  bftdi_TopSilk.gbr
tests/: README.md  test_fifo.py
tests/fpga_ds/: bemicro_probe_pins.qsf  crc8.vhd  fpga_ds.qpf  fpga_ds.qsf  fpga_ds.sdc  fpga_ds.vhd
tests/fpga_up/: if_test.sdc  if_test.vhd
tests/fpga_us/: fpga_us.qpf  fpga_us.qsf  fpga_us.sdc  fpga_us.vhd
tests/host/: CMakeLists.txt  bf_eeprom_reset.c  bf_leds.c  bf_rxfifo.c  bf_txfifo.c  crc8.c  crc8.h  ft_fifo.c  ft_fifo.h
tests/if_test/: bemicro_probe_pins.qsf  if_test.qpf  if_test.qsf  if_test.vhd
